no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -16,11 +16,8 @@ TYPESCRIPT/FLOW ==>               #See TSESTree doc
 JSX ==>                           #See JSX AST doc
 
 NOTATION ==>                     |#Pull requests
-                                 ##Outside of ESTree
-                                  #Babel:
-                                 =#  - variant of ESTree
-                                 *#  - ES proposals support
-                                =*#  - unless indicated otherwise, only supported by @babel/parser
+                                 ##Non-standard
+                                 *#Non-standard but might become (ES proposals)
                                   #Parsers (no parenthesis if absent, parenthesis if present):
                                  s#  - esprima
                                  a#  - acorn
@@ -28,6 +25,7 @@ NOTATION ==>                     |#Pull requests
                                  t#  - typescript-estree
                                  m#  - meriyah
                                  b#  - @babel/parser
+                                 l#  - @babel/parser with estree PLUGIN
 
 
                                              /=+===============================+=\
@@ -42,7 +40,7 @@ OPTIONAL VALUES ==>               #Are either defined or null
 any                               #NODE:
                                   #  - type STR
                                   #  - [loc] (position in source code):
-                             seatb#     - [source VAL]
+                            seatbl#     - [source VAL]
                                   #     - start|end:
                                   #        - line NUM (1-indexed)
                                   #        - column NUM (0-indexed)
@@ -77,8 +75,8 @@ NON_TOKEN                        |#CST node not present in AST:
 
 RAW VALUE ==>                   b##On EXPR:
                                 b##  - raw STR
-                                 =#On *_LITERAL (except BOOL|null):
-                                 =#  - extra.raw STR
+                              (b)##On *_LITERAL (except BOOL|null):
+                              (b)##  - extra.raw STR
 
 
                                              /=+===============================+=\
@@ -88,9 +86,9 @@ RAW VALUE ==>                   b##On EXPR:
                                              \=+===============================+=/
 
 
-FILE                             =#Type 'File':
-                                 =#  - program PROGRAM
-                                 =#  - [name STR]
+FILE                          (bl)##Type 'File':
+                              (bl)##  - program PROGRAM
+                              (bl)##  - [name STR]
 PROGRAM                           #Type 'Program':
                                   #  - sourceType 'script|module'
                                   #  - body STATEMENT|MODULE_DECLARATION_ARR
@@ -100,23 +98,23 @@ EXPR_STATEMENT                    #Child of STATEMENT, type 'ExpressionStatement
                                   #  - expression EXPR
                                   #Statement with single EXPR.
 (EXPR)                       (am)##Child of EXPRESSION_STATEMENT, type 'ParenthesizedExpression'
-                                 =#On EXPR:
-                                 =#  - extra.parenthesized BOOL
-                                 =#  - extra.parenStart NUM
+                             (bl)##On EXPR:
+                             (bl)##  - extra.parenthesized BOOL
+                             (bl)##  - extra.parenStart NUM
 
-#!/bin/bash                      =#On PROGRAM:
-                                 =#  - interpreter INTERPRETER_DIRECTIVE
-                                 =#Type 'InterpreterDirective'
-                                 =#  - value STR
+#!/bin/bash                   (b)##On PROGRAM:
+                              (b)##  - interpreter INTERPRETER_DIRECTIVE
+                              (b)##Type 'InterpreterDirective'
+                              (b)##  - value STR
 'use strict'                      #Child of EXPR_STATEMENT:
                                   #  - directive STR
                                   #  - expression LITERAL
-                                 =#On PROGRAM|BLOCK_STATEMENT:
-                                 =#  - directives DIRECTIVE_ARR
-                                 =#Type 'Directive':
-                                 =#  - value DIRECTIVE_LITERAL (type 'DirectiveLiteral'):
-                                 =#     - value STR
-                                 =#     - extra.raw[Value] STR
+                              (b)##On PROGRAM|BLOCK_STATEMENT:
+                              (b)##  - directives DIRECTIVE_ARR
+                              (b)##Type 'Directive':
+                              (b)##  - value DIRECTIVE_LITERAL (type 'DirectiveLiteral'):
+                              (b)##     - value STR
+                              (b)##     - extra.raw[Value] STR
 
 ;                                 #Child of STATEMENT, type 'EmptyStatement'
                                   #Empty statement, with only semicolon
@@ -128,13 +126,13 @@ EXPR_STATEMENT                    #Child of STATEMENT, type 'ExpressionStatement
                               amb##COMMENT:
                               amb##  - type 'Line|Block'
                               amb##  - value STR
-                                 =#On FILE:
-                                 =#  - comments COMMENT_ARR
-                                 =#On NODE:
-                                 =#  - [leadingComment|trailingComments|innerComments COMMENT_ARR]
-                                 =#COMMENT:
-                                 =#  - type 'CommentLine|Block'
-                                 =#  - value STR
+                              (b)##On FILE:
+                              (b)##  - comments COMMENT_ARR
+                              (b)##On NODE:
+                              (b)##  - [leadingComment|trailingComments|innerComments COMMENT_ARR]
+                              (b)##COMMENT:
+                              (b)##  - type 'CommentLine|Block'
+                              (b)##  - value STR
 
 
                                              /=+===============================+=\
@@ -165,8 +163,8 @@ OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - computed true (VAL) or false (VAR)
 OBJ?.VAR                   seatmb|#On MEMBER_EXPRESSION:
 OBJ?.[VAL]                 seatmb|#  - optional BOOL
-                                 =#Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
-                                 =#  - optional BOOL
+                              (b)##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
+                              (b)##  - optional BOOL
 
 {VAR, ...}                        #Child of PATTERN, type 'ObjectPattern' (deconstruction):
 {...OBJ, ...}                     #  - properties ARR of either:
@@ -221,10 +219,10 @@ await VAL                         #Child of EXPRT, type 'AwaitExpression':
 FUNC(...)                         #Child of EXPR, type 'CallExpression':
                                   #  - callee EXPR|SUPER|IMPORT (FUNC)
                                   #  - arguments ARR of EXPR|SPREAD_ELEMENT
-                                 *#    or ARGUMENT_PLACEHOLDER
+                              (b)*#    or ARGUMENT_PLACEHOLDER
                            seatmb|#  - optional BOOL (FUNC?.(...))
-                                 =#Child of CALL_EXPRESSION, type 'OptionalCallExpression'
-                                 =#  - optional BOOL (FUNC?.(...))
+                              (b)##Child of CALL_EXPRESSION, type 'OptionalCallExpression'
+                              (b)##  - optional BOOL (FUNC?.(...))
 new FUNC(...)                     #Child of EXPR, type 'NewExpression':
                                   #  - callee EXPR (FUNC)
                                   #  - arguments EXPR|SPREAD_ELEMENT_ARR
@@ -236,11 +234,11 @@ new FUNC(...)                     #Child of EXPR, type 'NewExpression':
                                sae#Type 'Decorator':
                                sae#  - expression EXPR
 
-[VAL]::VAL2                      *#Child of EXPR, type 'BindExpression':
-                                 *#  - [object EXPR] (VAL)
-                                 *#  - [callee EXPR] (VAL2)
+[VAL]::VAL2                   (b)*#Child of EXPR, type 'BindExpression':
+                              (b)*#  - [object EXPR] (VAL)
+                              (b)*#  - [callee EXPR] (VAL2)
 
-?                                *#Type 'ArgumentPlaceholder'
+?                             (b)*#Type 'ArgumentPlaceholder'
 
 
 
@@ -301,8 +299,8 @@ LABEL: ...                        #Child of STATEMENT, type 'LabeledStatement':
                                   #  - label IDENTIFIER
                                   #  - body STATEMENT
 
-do {...}                         *#Child of EXPRESSION, type 'DoExpression':
-                                 *#  - body STATEMENT
+do {...}                      (b)*#Child of EXPRESSION, type 'DoExpression':
+                              (b)*#  - body STATEMENT
 
 
                                              /=+===============================+=\
@@ -341,13 +339,13 @@ STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
                                  b#     - flags STR
                               seb|#  (BIGINT only)
                               seb|#  - bigint STR (without 'n')
-                                 =#Type 'String|Boolean|Numeric|Null|RegExpLiteral':
-                                 =#  - value STR|BOOL|NUM|null|REGEXP|BIGINT
-                                 =#  (not BOOL|null)
-                                 =#  - extra.rawValue STR|BOOL|NUM|null|REGEXP: like value
-                                 =#  (REGEXP only)
-                                 =#  - pattern STR
-                                 =#  - flags STR
+                              (b)##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
+                              (b)##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
+                              (b)##  (not BOOL|null)
+                              (b)##  - extra.rawValue STR|BOOL|NUM|null|REGEXP: like value
+                              (b)##  (REGEXP only)
+                              (b)##  - pattern STR
+                              (b)##  - flags STR
                                sae#NUM can use _ separators
 undefined                         #Considered a VAR
 
@@ -372,12 +370,12 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
                                  b#  - method BOOL (if FUNC)
                                  b#  - shorthand BOOL (if { VAR })
                                  b#  - computed BOOL
-                                 =#Type 'ObjectProperty' like PROPERTY but only for non-FUNCs and:
-                                 =#  - extra.shorthand: like shorthand
-                                 =#Type 'ObjectMethod' like PROPERTY but only for FUNCs and:
-                                 =#  - child of FUNCTION_DECLARATION
-                                 =#  - no value|shorthand
-                                 =#  - kind 'init' -> 'method'
+                              (b)##Type 'ObjectProperty' like PROPERTY but only for non-FUNCs and:
+                              (b)##  - extra.shorthand: like shorthand
+                              (b)##Type 'ObjectMethod' like PROPERTY but only for FUNCs and:
+                              (b)##  - child of FUNCTION_DECLARATION
+                              (b)##  - no value|shorthand
+                              (b)##  - kind 'init' -> 'method'
 
 [VAL...]                          #Child of EXPR, type 'ArrayExpression':
                                   #  - elements EXPR2|SPREAD_ELEMENT_ARR (null for sparse ARR elements)
@@ -395,7 +393,7 @@ TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression
 !VAL
 ~VAL                              #Child of EXPR, type 'UnaryExpression':
 typeof VAL                        #  - operator '-|+|!|~|typeof|void|delete'
-throw VAL                        *#    or 'throw'
+throw VAL                     (b)*#    or 'throw'
 void VAL                          #  - prefix BOOL (always true)
 delete VAL                        #  - argument EXPR
 
@@ -408,19 +406,19 @@ VAR--                             #  - argument EXPR
 VAL == != === !== < <= > >= <<    #Child of EXPR, type 'BinaryExpression':
 >> >>> + - * / % ** | ^ & in      #  - operator '==|!=|===|!==|<|<=|>|>=|<<|>>|>>>|+|-|*|/|%|**|||^|&|in|instanceof'
 instanceof VAL2                   #
-VAL |> VAL2                      *#    or '|>'
+VAL |> VAL2                   (b)*#    or '|>'
                                   #  - left EXPR
                                   #  - right EXPR
 
 VAR = += -= *= /= **= %= <<= >>=  #Child of EXPR, type 'AssignmentExpression':
 >>>= |= ^= &= VAL                 #  - operator '=|+=|-=|*=|/=|**=|%=|<<=|>>=|>>>=||=|^=|&='
-VAR &&= ||= ??= VAL              *#    or '&&=|||=|??='
+VAR &&= ||= ??= VAL           (b)*#    or '&&=|||=|??='
                                   #  - left PATTERN or (only on older JavaScript engines) EXPR
                                   #  - right EXPR
 
 VAL || && VAL2                    #Child of EXPR, type 'LogicalExpression':
                                   #  - operator '|||&&'
-VAL ?? VAL2                      *#   or '??'
+VAL ?? VAL2                   (b)*#   or '??'
                                   #  - left EXPR
                                   #  - right EXPR
 
@@ -446,26 +444,26 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
                                   #  - body CLASS_BODY
                                   #Type 'ClassBody':
                                 tb#  - body METHOD_DEFINITION|FIELD_DEFINITION_ARR
-                              (t)=#  - body METHOD_DEFINITION|CLASS_PROPERTY_ARR
-                                 =#  - body CLASS_METHOD|CLASS_PROPERTY_ARR
+                              (t)##  - body METHOD_DEFINITION|CLASS_PROPERTY_ARR
+                              (b)##  - body CLASS_METHOD|CLASS_PROPERTY_ARR
                                  b#Type 'MethodDefinition':
                                  b#  - key EXPR|PRIVATE_NAME
                                  b#  - value FUNCTION_EXPR
                                  b#  - kind 'constructor|method|get|set'
                                  b#  - static BOOL
                                  b#  - computed BOOL
-                                 =#Type 'ClassMethod' like METHOD_DEFINITION but:
-                                 =#  - child of FUNCTION_DECLARATION
-                                 =#  - no value
+                              (b)##Type 'ClassMethod' like METHOD_DEFINITION but:
+                              (b)##  - child of FUNCTION_DECLARATION
+                              (b)##  - no value
   [static] VAR [= VAL]       setb|#Type 'FieldDefinition'
-                              (t)=#or 'ClassProperty':
+                             (tb)##or 'ClassProperty':
                                se|#  - key EXPR|PRIVATE_NAME
                                se|#  - [value EXPR]
                                se|#  - static BOOL
                                se|#  - computed BOOL
   #VAR|#FUNC()                set|#Type 'PrivateName':
                              setb|#  - name STR
-                                 =#  - id IDENTIFIER
+                              (b)##  - id IDENTIFIER
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
@@ -473,7 +471,7 @@ new.target                        #Child of EXPR, type 'MetaProperty':
                                   #  - meta IDENTIFIER
                                   #  - property IDENTIFIER
 import.meta                    sem#Same
-function.sent                    *#Same
+function.sent                 (b)*#Same
 
 this                              #Child of EXPR, type 'ThisExpression'
 
@@ -509,11 +507,11 @@ export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefa
 export * from "MDL"               #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
 
-export * as VAR from "MDL"   (am)*#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
-                             (am)*#  - no local
+export * as VAR from "MDL"  (amb)*#Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
+                            (amb)*#  - no local
                               (m)##  - exported -> specifier
-export VAL from "MDL"            *#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
-                                 *#  - no local
+export VAL from "MDL"         (b)*#Child of EXPORT_SPECIFIER, type 'ExportDefaultSpecifier':
+                              (b)*#  - no local
 
 import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDeclaration':
                                   #  - specifiers MODULE_SPECIFIER_ARR
@@ -530,4 +528,4 @@ import {}                         #Those have empty ARR as specifiers
 
 import("MDL")               seatb|#Child of EXPR, type 'ImportExpression':
                             seatb|#  - source EXPR
-                             (at)=#Treated as a CALL_EXPRESSION
+                            (atb)##Treated as a CALL_EXPRESSION
