--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/jsx_ast.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/jsx_ast.format.txt
@@ -41,4 +41,4 @@ ATTR[="VAL"]                      #Type 'JSXAttribute':
 TEXT                             s#Type 'JSXText':
                                  s#  - value STR
                                smb#  - raw STR
-                                 =#  - extra.rawValue|raw: like value|raw
+                               (b)#  - extra.rawValue|raw: like value|raw
