--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -14,8 +14,7 @@ SUPPORT ==>                       #Only @babel/parser and typescript-estree
 FLOW ==>                          #Not documented.
                                   #Only supported by Babel
 
-NOTATION ==>                     =#Babel variant of TSESTree
-                                 b#Not supported by @babel/parser
+NOTATION ==>                      #Like ESTree (see its doc)
 
 
                                              /=+===============================+=\
@@ -128,7 +127,7 @@ object                            #Child of TS_TYPE, type 'TSObjectKeyword'
 
 BOOL|NUM|STR                      #Child of TS_TYPE, type 'TSLiteralType':
                                  b#  - literal LITERAL
-                                 =#  - literal *_LITERAL
+                               (b)#  - literal *_LITERAL
 BIGINT                           b#Same
 
 
@@ -206,11 +205,11 @@ class CLASS {}
 abstract class ...                #On CLASS_DECLARATION:
                                   #  - [abstract BOOL]
   abstract VAR                   b#Type 'TSAbstractClassProperty' (like CLASS_PROPERTY)
-                                 =#On CLASS_PROPERTY:
-                                 =#  - [abstract BOOL]
+                              (b)##On CLASS_PROPERTY:
+                              (b)##  - [abstract BOOL]
   abstract FUNC()                b#Type 'TSAbstractMethodDefinition' (like METHOD_DEFINITION)
-                                 =#On CLASS_METHOD|TS_DECLARE_METHOD:
-                                 =#  - [abstract BOOL]
+                              (b)##On CLASS_METHOD|TS_DECLARE_METHOD:
+                              (b)##  - [abstract BOOL]
 
 interface INTERFACE {}            #Child of DECLARATION, type 'TSInterfaceDeclaration':
                                   #  - id IDENTIFIER
@@ -220,13 +219,13 @@ interface INTERFACE {}            #Child of DECLARATION, type 'TSInterfaceDeclar
 extends PARENT                    #On INTERFACE:
                                   #  - extends TS_INTERFACE_HERITAGE_ARR
                                  b#Type 'TSInterfaceHeritage'
-                                 =#Type 'TSExpressionWithTypeArguments'
+                              (b)##Type 'TSExpressionWithTypeArguments'
                                   #Child of TS_TYPE:
                                   #  - expression EXPR
 implements PARENT                 #On CLASS:
                                   #  - implements TS_CLASS_IMPLEMENT_ARR
                                  b#Type 'TSClassImplements'
-                                 =#Type 'TSExpressionWithTypeArguments'
+                              (b)##Type 'TSExpressionWithTypeArguments'
                                   #Child of TS_TYPE:
                                   #  - expression EXPR
 
@@ -241,25 +240,25 @@ implements PARENT                 #On CLASS:
 ([...]VAR[?]: TYPE,...) => TYPE2  #Child of TS_TYPE, type 'TSFunctionType':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                                 =#params -> parameters, returnType -> typeAnnotation
+                              (b)##params -> parameters, returnType -> typeAnnotation
 new (...) => TYPE2                #Child of TS_TYPE, type 'TSConstructorType':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                                 =#params -> parameters, returnType -> typeAnnotation
+                              (b)##params -> parameters, returnType -> typeAnnotation
 { FUNC(...)[: TYPE2] }            #Type 'TSMethodSignature':
                                   #  - key EXPR
                                   #  - [computed BOOL] (when key is [STR])
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                                 =#params -> parameters, returnType -> typeAnnotation
+                              (b)##params -> parameters, returnType -> typeAnnotation
 { (...)[: TYPE2], ... }           #Type 'TSCallSignatureDeclaration':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                                 =#params -> parameters, returnType -> typeAnnotation
+                              (b)##params -> parameters, returnType -> typeAnnotation
 { new (...)[: TYPE2] }            #Type 'TSConstructSignatureDeclaration':
                                   #  - [params IDENTIFIER|REST_ELEMENT_ARR]
                                   #  - [returnType TS_TYPE_ANNOTATION]
-                                 =#params -> parameters, returnType -> typeAnnotation
+                              (b)##params -> parameters, returnType -> typeAnnotation
 
 this                              #Child of TS_TYPE, type 'TSThisType'
                                   #When used as return value type
@@ -315,7 +314,7 @@ declare function <T,...>(...)     #     - params TS_TYPE_PARAMETER_ARR
 
  T [extends TYPE3][ = TYPE4]      #Type 'TSTypeParameter':
  T in TYPE3                      b#  - [name IDENTIFIER]
-                                 =#  - [name STR]
+                              (b)##  - [name STR]
                                   #  - [constraint TYPE3]
                                   #  - [default TYPE4]
 
@@ -405,7 +404,7 @@ declare global ...                #  - [declare BOOL]
 declare [async] function FUNC()   #Child of DECLARATION, type 'TSDeclareFunction'. Like FUNCTION_DECLARATION except no body
 
 class ... { FUNC() }             b#METHOD_DEFINITION with no body
-                                 =#Type 'TSDeclareMethod'. Like CLASS_METHOD except no body
+                              (b)##Type 'TSDeclareMethod'. Like CLASS_METHOD except no body
 
 
                                              /=+===============================+=\
