no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -8,10 +8,12 @@
 ALTERNATIVES ==>                  #  - ESTree (def): most supported
                                   #  - Shift: less supported
 
-VERSION ==>                       #Last commit 26/01/2018
+VERSION ==>                       #Last check 13/07/2019
                                   #JavaScript AST standard
 
-TYPESCRIPT/FLOW ==>               #See TSESTree
+TYPESCRIPT/FLOW ==>               #See TSESTree doc
+
+JSX ==>                           #See JSX AST doc
 
 NOTATION ==>                     |#Pull requests
                                  ##Outside of ESTree
