--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/jsx_ast.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/jsx_ast.format.txt
@@ -4,16 +4,20 @@
            
 
 
-AST TREE ==>                      #Supported by: esprima, acorn, espree, @babel/parser, flow, typescript, typescript-estree
+
+AST TREE ==>                      #Supported by all my documented parsers
+
+NOTATION ==>                      #Like ESTree (see its doc)
 
 <ELEM>...</ELEM>                  #Child of EXPR, type 'JSXElement':
                                   #  - openingElement JSX_OPENING_ELEM
                                   #  - [closingElement JSX_CLOSING_ELEM] (none if selfClosing)
-                                  #  - children ARR of JSX_ELEM|JSX_TEXT|JSX_EXPR_CONTAINER|JSX_SPREAD_CHILD
+                                  #  - children ARR of JSX_ELEM|JSX_TEXT|JSX_EXPR_CONTAINER|JSX_SPREAD_CHILD|JSX_FRAGMENT
+<>...</>                         s#Child of EXPR, type 'JSXFragment': like JSX_ELEMENT except closingElement is not optional
 <ELEM>                            #Type 'JSXOpeningElement':
                                   #  - name JSX_IDENTIFIER|JSX_MEMBER_EXPR|JSX_NAMESPACED_NAME
-                                  #  - selfClosing BOOL: if <ELEM/>
-                                  #  - attributes ARR of JSX_ATTRIBUTE|JSX_SPREAD_ATTRIBUTE
+                                  #  - [selfClosing BOOL]: if <ELEM/>
+                                  #  - [attributes ARR of JSX_ATTRIBUTE|JSX_SPREAD_ATTRIBUTE]
 </ELEM>                           #Type 'JSXClosingElement':
                                   #  - name JSX_IDENTIFIER|JSX_MEMBER_EXPR|JSX_NAMESPACED_NAME
 
@@ -21,20 +25,20 @@ ELEM|ATTR                         #Child of IDENTIFIER, type 'JSXIdentifier'
 ELEM.ELEM2                        #Child of EXPR, type 'JSXMemberExpression':
                                   #  - object JSX_IDENTIFIER|JSX_MEMBER_EXPR (all parts but last)
                                   #  - property JSX_IDENTIFIER (last part)
-NS:ELEM|ATTR                      #Child of EXPR, type 'JSXNamespacedName':
-                                  #  - name JSX_IDENTIFIER
-                                  #  - namespace JSX_IDENTIFIER
+NS:ELEM|ATTR                     t#Child of EXPR, type 'JSXNamespacedName':
+                                 t#  - name JSX_IDENTIFIER
+                                 t#  - namespace JSX_IDENTIFIER
 
 ATTR[="VAL"]                      #Type 'JSXAttribute':
                                   #  - name JSX_IDENTIFIER|JSX_NAMESPACED_NAME
-                                  #  - [value LITERAL|JSX_EXPR_CONTAINER|JSX_ELEM]
+                                  #  - [value LITERAL|JSX_EXPR_CONTAINER|JSX_ELEM|JSX_FRAGMENT]
 {...ATTR_OBJ}                     #Child of SPREAD_ELEM, type 'JSXSpreadAttribute'
 
 {VAL}                             #Type 'JSXExpressionContainer':
                                   #  - expression EXPR or JSX_EMPTY_EXPR (type 'JSXEmptyExpression')
-{...CHILD}                        #Type 'JSXSpreadChild'
+{...CHILD}                     sae#Type 'JSXSpreadChild'
 
-TEXT                              #Type 'JSXText':
-                                  #  - value STR
-                                  #  - raw STR
-
+TEXT                             s#Type 'JSXText':
+                                 s#  - value STR
+                               smb#  - raw STR
+                                 =#  - extra.rawValue|raw: like value|raw
