no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -515,7 +515,7 @@ NewableFunction                   #Same but for a constructor.
                                   #No additional arguments:
                                   #  - unless variadic ...VAR (always optional)
                                   #VAR names are not significant.
-                                  #Argument TYPEs are only checked inside body during declaration statement
+                                  #Function body is only checked against argument TYPEs during declaration statement:
                                   #  - not when FUNC is transtyped after declaration
                                   #  - not when FUNC(...VAL) is called
                                   #     - but VAL are checked against argument TYPEs
@@ -865,15 +865,18 @@ declare ... class ...             #  - FUNC: no body
 declare namespace ...             #  - enum|class|namespace: only TYPE not value
 declare type ...                  #  - type|interface: noop
 declare interface ...             #Goal:
-                                  #  - when packaged 'MODULE' is in JavaScript
-                                  #     - even if it was transpiled from TypeScript
-                                  #  - but we want to export TYPEs to consumers
 
 export declare ...                #ESM `export` must be before `declare`
 
 AMBIENT FILE ==>                  #File where every statement is declaration|TYPE.
                                   #Often named *.d.ts. Should be sibling to each build file for easy resolution|discovery.
                                   #Should be treated as a production dependency (or peer dependency), not dev dependency.
+                                  #Goal:
+                                  #  - source + package in JavaScript, but want to export TYPEs to TypeScript consumers
+                                  #  - source in TypeScript but package in JavaScript. Reasons:
+                                  #     - separation of concerns: responsability of each package to check its types
+                                  #     - performance: consumers don't need to type check
+                                  #     - compatibility: consumer might use different TypeScript version or options
 
 -d|--declaration                  #Generate *.d.ts ambient files:
                                   #  - type inference on import|export statements
