no commit message

--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/estree.format.txt
@@ -10,6 +10,8 @@ VERSION ==>                       #Last commit 26/01/2018
 
 TYPESCRIPT/FLOW ==>               #See TSESTree
 
+PULL REQUESTS ==>                -#Marked like this
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -32,6 +34,28 @@ any                               #NODE:
                                   #  - all redefine type STR, except if abstract types themselves
 
 EXPR                              #EXPR
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:              CST              :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+CONCRET SYNTAX TREE ==>          -#Like AST but includes information that is:
+                                 -#  - non-significant: whitespaces, comments, some parenthesis, semicolons
+                                 -#  - normalized: escape sequences, quote symbols, number formatting
+                                 -#On NODE:
+                                 -#  - [sourceElements TOKEN|NON_TOKEN|CHILD_REFERENCE_ARR]
+
+CHILD_REFERENCE                  -#Information to relate CST node to AST node:
+                                 -#  - reference 'TYPE[#next]'
+TOKEN                            -#Child of CHILD_REFERENCE, for CST node also present in AST:
+                                 -#  - element STR: parser-specific CST node type
+                                 -#  - [value STR]: raw source
+NON_TOKEN                        -#CST node not present in AST:
+                                 -#  - element|value: like TOKEN
 
 
                                              /=+===============================+=\
@@ -87,7 +111,9 @@ VAR                               #Child of EXPR+PATTERN, type 'Identifier':
 OBJ.VAR                           #Child of EXPR+PATTERN, type 'MemberExpression':
 OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
+                                 -#    or PRIVATE_NAME (#VAR)
                                   #  - computed true (VAL) or false (VAR)
+                                 -#  - optional BOOL (OBJ?.VAR or OBJ?.[VAL])
 
 {VAR, ...}                        #Child of PATTERN, type 'ObjectPattern' (deconstruction):
 {...OBJ, ...}                     #  - properties ARR of either:
@@ -148,6 +174,7 @@ await VAL                         #Child of EXPRT, type 'AwaitExpression':
 FUNC(...)                         #Child of EXPR, type 'CallExpression':
                                   #  - callee EXPR|SUPER|IMPORT (FUNC)
                                   #  - arguments EXPR|SPREAD_ELEMENT_ARR
+                                 -#  - optional BOOL (FUNC?.(...))
 new FUNC(...)                     #Child of EXPR, type 'NewExpression':
                                   #  - callee EXPR (FUNC)
                                   #  - arguments EXPR|SPREAD_ELEMENT_ARR
@@ -240,11 +267,14 @@ debugger                          #Child of STATEMENT, type 'DebuggerStatement'
 
 
 STR|BOOL|NUM|BIGINT|null|REGEXP   #Child of EXPR, type 'Literal':
-                                  #  - value STR|BOOL|NUM|BIGINT|null|REGEXP
+                                  #  - value STR|BOOL|NUM|null|REGEXP
+                                 -#    or BIGINT
                                   #  (REGEXP only)
                                   #  - regex:
                                   #     - pattern STR
                                   #     - flags STR
+                                 -#  (BIGINT only)
+                                 -#  - bigint STR (without 'n')
 undefined                         #Considered a VAR
 
 TAG`...`                          #Child of EXPR, type 'TaggedTemplateExpression':
@@ -293,6 +323,7 @@ delete VAL                        #  - argument EXPR
 VAR++                             #  - operator '--|++'
 --VAR                             #  - prefix BOOL
 VAR--                             #  - argument EXPR
+                                 -#    or PATTERN
 
 VAL == != === !== < <= > >= <<    #Child of EXPR, type 'BinaryExpression':
 >> >>> + - * / % ** | ^ & in      #  - operator '==|!=|===|!==|<|<=|>|>=|<<|>>|>>>|+|-|*|/|%|**|||^|&|in|instanceof'
@@ -329,14 +360,22 @@ VAL,...                           #Child of EXPR, type 'SequenceExpression':
 class [CLASS] [extends PARENT] {  #  - [id IDENTIFIER]
   [@DECORATOR]                    #  - [superClass EXPR]
   [static] FUNC(...) {...}        #  - body CLASS_BODY, type 'ClassBody':
-}                                 #     - body METHOD_DEFINITION_ARR, type 'MethodDefinition':
-                                  #        - key EXPR
-                                  #        - value FUNCTION_EXPR
-                                  #        - kind 'constructor|method|get|set'
-                                  #        - static BOOL
-                                  #        - computed BOOL
-                                  #        - decorators DECORATOR_ARR
+}                                 #     - body METHOD_DEFINITION|FIELD_DEFINITION_ARR
                                   #  - decorators DECORATOR_ARR
+                                  #Type 'MethodDefinition':
+                                  #  - key EXPR|PRIVATE_NAME
+                                  #  - value FUNCTION_EXPR
+                                  #  - kind 'constructor|method|get|set'
+                                  #  - static BOOL
+                                  #  - computed BOOL
+                                  #  - decorators DECORATOR_ARR
+  [static] VAR [= VAL]           -#Type 'FieldDefinition':
+                                 -#  - key EXPR|PRIVATE_NAME
+                                 -#  - [value EXPR]
+                                 -#  - static BOOL
+                                 -#  - computed BOOL
+  #VAR|#FUNC()                   -#Type 'PrivateName':
+                                 -#  - name STR
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
@@ -391,5 +430,5 @@ import * as VAR                   #      IMPORT_NAMESPACE_SPECIFIER, type 'Impor
 import "MDL"                      #
 import {}                         #Those have empty ARR as specifiers
 
-import("MDL")
-import(STR).VAR                   #Just a CALL_EXPRESSION
+import("MDL")                    -#Child of EXPR, type 'ImportExpression':
+                                 -#  - source EXPR
