--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/TypeScript/tsestree.format.txt
@@ -390,10 +390,12 @@ class ... { FUNC() }              #Type 'TSDeclareMethod'. Like METHOD_DEFINITIO
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:         COMMONJS/UMD          :==(
+                                            )==:            MODULES            :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
+
+import(STR).VAR                   #Just a CALL_EXPRESSION
 
 export = VAL                      #Child of STATEMENT, type 'TSExportAssignment':
                                   #  - expression EXPR
