--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/acorn.javascript_cli.txt
@@ -13,6 +13,8 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - acorn (preferred):
                                   #     - uses ESTree
                                   #     - most utilities functions, good plugin system
+                                  #     - no support for recent ES features
+                                  #     - loose parsing
                                   #  - @babel/parser:
                                   #     - fork of acorn, used by Babel
                                   #     - uses slightly different ESTree
@@ -36,7 +38,7 @@ ALTERNATIVES ==>                  #  - esprima:
                                   #  - cherow: not maintained
                                   #  - esprit: not maintained
 
-VERSION ==>                       #6.2.0
+VERSION ==>                       #6.2.0 (acorn), 6.1.0 (acorn-loose), 6.2.0 (acorn-walker)
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
@@ -99,6 +101,9 @@ ACORN.parseExpressionAt           #Same but for an expression, not a full file.
  ('JS', OFFSET_NUM[, OPTS])       #Ignores next expressions|statements
  ->EXPR_NODE                      #A bit faster
 
+ACORN-LOOSE.parse('JS'[, OPTS])
+ ->PROGRAM_NODE
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -155,51 +160,6 @@ TOKEN_TYPE.label                  #Name STR:
 
                                              /=+===============================+=\
                                             /  :                               :  \
-                                            )==:            WALKER             :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-WALK                              #Must require('acorn-walk')
-                                  #Version 6.1.0
-                                  #NODE types:
-                                  #  - include abstract types: 'Expression', 'Statement', 'Pattern', 'Function'
-                                  #  - add: 'ForInit' (first part of "for in|of")
-                                  #  - do not include: 'ExportSpecifier', 'ClassBody', 'SwitchCase'
-                                  #There is possibility to customize the walker:
-                                  #  - i.e. whether children nodes should be walked through or not, or direction of walking
-                                  #  - I don't see much reason except performance, so I do not documented here
-                                  #  - for information it's done with:
-                                  #     - WALK.simple|ancestors() third argument
-                                  #     - WALK.make|recursive()
-                                  #     - WALK.findNode*() second-to-last argument
-                                  #There is also possibility to keep state during walking:
-                                  #  - but can also just use a close for that, so not documented here
-                                  #  - for information it's done with:
-                                  #     - WALK.simple|ancestors() fourth argument
-                                  #     - WALK.findNode*() last argument
-
-WALK.simple(NODE, OBJ)            #Walk through AST tree and call OBJ.TYPE(CHILD_NODE) for each CHILD_NODE whose type is TYPE
-                                  #Start with leaves, end with root
-WALK.ancestors(NODE, OBJ)         #Same but instead call OBJ.TYPE(CHILD_NODE, ANCESTOR_NODE_ARR)
-                                  #ANCESTOR_NODE_ARR starts with ancestor and ends with CHILD_NODE
-WALK.full[Ancestors](NODE, FUNC)  #Same as two previous ezcept always FUNC(CHILD_NODE, ...)
-
-WALK.findNodeAt                   #Returns OBJ, with OBJ.node, first NODE where:
-(NODE[, START_OFFSET[, END_OFFSET #  - NODE.start === START_OFFSET (unless null|undefined)
-[,'TYP'|FUNC('TYP',NODE)->BOOL]]])#  - NODE.end === END_OFFSET (unless null|undefined)
-->OBJ                             #  - 'TYPE'|FUNC()->true (can set OFFSET null and only set that test)
-                                  #Returns undefined if none found
-WALK.findNodeAround(NODE, OFFSET,
-'TYP'|FUNC('TYP',NODE)->BOOL)->OBJ#Same with NODE.start <= OFFSET <= NODE.end (OFFSET cannot be null|undefined)
-WALK.findNodeAfter(NODE, OFFSET,
-'TYP'|FUNC('TYP',NODE)->BOOL)->OBJ#Same with NODE.start >= OFFSET (OFFSET cannot be null|undefined)
-WALK.findNodeBefore(NODE, OFFSET,
-'TYP'|FUNC('TYP',NODE)->BOOL)->OBJ#Same with OFFSET <= NODE.end (OFFSET cannot be null|undefined)
-
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
                                             )==:              CLI              :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
@@ -210,7 +170,9 @@ acorn [FILE]                      #CLI. Calls ACORN.parse() -> console.log()
                                   #Exit code 1 if error
 --tokenize                        #Same with ACORN.tokenize()
 --silent                          #Do not console.log(), only use exit code
+
 --compact                         #Do not indent JSON output
+
 --ecma3|5|6|7|8
 --module
 --allow-hash-bang
@@ -224,6 +186,9 @@ acorn [FILE]                      #CLI. Calls ACORN.parse() -> console.log()
                                              \=+===============================+=/
 
 
+ACORN.Parser                      #PARSER. Same as ACORN, except with additional method extend()
+PARSER.extend(PLUGIN...)          #
+
 ACORN-ES7(ACORN)                 ##Patches ACORN so it can process decorators, according to ESTree
                                  ##PLUGIN name: 'es7'
                                  ##New token types: at
@@ -234,3 +199,7 @@ ACORN-JSX/inject(ACORN)          ##Patches ACORN so it can process JSX (see JSX 
                                  ##New token types: jsxName, jsxText, jsxTagStart, jsxTagEnd
                                  ##Does not support: JSXSpreadChild
                                  ##Version 5.0.1
+
+ACORN-EXPORT-NS-FROM             ##PLUGIN for "export * as VAR from '...'" (ExportNamedDeclaration)
+
+ACORN-DYNAMIC-IMPORT             ##PLUGIN for import()
